--- a/public/index.html
+++ b/public/index.html
@@ -44,4 +44,5 @@
     -->
   </body>
   <script src="https://getbootstrap.com/docs/5.1/dist/js/bootstrap.bundle.min.js" ></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 </html>
